--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">MovieApp</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="fragment_login_title">Iniciar Sesion</string>
+    <string name="fragment_login_helper_email">Correo Electronico</string>
+    <string name="fragment_login_helper_password">Contraseña</string>
+    <string name="fragment_login_remember_account">Recordar mi cuenta</string>
+    <string name="fragment_login_create_account">Crear cuenta</string>
+    <string name="fragment_login_forget_password">Olivdé mi contraseña</string>
 </resources>
